fixed gap in the dropdown

--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -227,7 +227,7 @@
   border-width: 40px 83px 0 83px;
   left: 0;
   top: 0px;
-  margin-top: 15px;
+  margin-top: 13px;
   display: none;
   align-self: center;
 }
