--- a/css/main.css
+++ b/css/main.css
@@ -2324,7 +2324,7 @@ footer {
   border-width: 40px 83px 0 83px;
   left: 0;
   top: 0px;
-  margin-top: 15px;
+  margin-top: 13px;
   display: none;
   align-self: center;
 }
